@@ -113,10 +113,14 @@
 	  <p> <code> rpm -e glibc-common --nodeps </code> </p>
 	  <p> <code> rpm -i --define "_install_langs all" 
 	  glibc-common-2.2.5-34.i386.rpm </code> </p>
- 	  <li> install just the necessary locales
+	  </li> 
+	  <li> install just the necessary locales
 	  <p> <code> localedef -i de_DE -f ISO-8859-1 de_DE </code> </p>
-         </p>
-      </dl>
+	  </li> 
+        </p>
+	</dd>
+      </dt>
+    </dl>
    </p>
 
 <hr>
